2009-01-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gstrfuncs.c: Move docs inline, adding references to g_free()
	where appropriate.

2009-01-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 564210 – SUN Studio 12 has supported visibility attribute

	* configure.in: Use visibility attribute for new enough sun cc.
	Patch by Chris Wang

2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 565905 – There is no named g_context_group_set_translation_domain()
	in GOption command line parser

	* glib/goption.c: Fix a wrong reference in the docs, reported by
	Takeshi Aihana.

2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	* glib/gspawn.c:
	* glib/gthread.c:
	* glib/goption.c:
	* glib/gmain.c:
	* glib/gkeyfile.c:
	* glib/gfileutils.c:
	* glib/gdate.c:
	* glib/garray.c:
	* glib/gbookmarkfile.c:
	* glib/gbacktrace.c: Fix some compiler warnings.

2008-12-19  Tor Lillqvist  <tml@novell.com>

	* glib/glib.symbols: Add g_thread_get_initialized here,
	too. Surround g_test_config_vars with ifdef INCLUDE_VARIABLES.

2008-12-18  Mike Kestner <mkestner@novell.com>

	Bug 560676 - function access for g_threads_supported

	* glib/gthreads.c (g_thread_get_initialized): new accessor for
	g_threads_supported macro.
	* glib/gthreads.h: add g_thread_get_initialized

2008-12-15  Matthias Clasen <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.19.3 ===

2008-12-13  Matthias Clasen <mclasen@redhat.com>

	* NEWS: Updates

2008-12-12  Dan Winship  <danw@gnome.org>

	* glib/pltcheck.sh: make this work on x86_64

2008-12-12  Behdad Esfahbod  <behdad@gnome.org>

	* glib/guniprop.c: Improve g_unichar_iswide_cjk() docs.

2008-12-07  Matthias Clasen  <mclasen@redhat.com>

	Bug 508021 – Add support for the CRIS and CRISv32 architectures

	* configure.in: 
	* glib/gatomic.c: Add an implementation for the CRIS and CRISv32 
	architectures, by Peter Kjellerstedt

2008-12-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gkeyfile.c: Some more documentation additions.
